// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
"<div>
  <div data-id=\\"Modal Code Parent\\">
    <div data-id=\\"Modal Code Sibling\\"></div>
  </div>
</div>"
`;

exports[`Snapshot match 2`] = `
"<div>
  <div data-id=\\"Modal Code Parent\\">
    <div data-id=\\"Modal Code Sibling\\"></div>
  </div>
</div>
<div>
  <div tabindex=\\"0\\"></div>
  <div aria-label=\\"Cancel\\" class=\\"src-shared-components-Modal-base-theme___overlay___1I8O7p\\" role=\\"button\\" tabindex=\\"0\\"></div>
  <div aria-modal=\\"true\\" class=\\"src-shared-components-Modal-base-theme___container___1ymeOm ad hoc container\\" role=\\"dialog\\">Modal Content</div>
  <div tabindex=\\"0\\"></div>
  <div tabindex=\\"0\\"></div>
</div>"
`;
